--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/AddTab.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/AddTab.xaml
@@ -1,12 +1,25 @@
-﻿<Window x:Class="CPSC_481_Horizontal_Prototype.AddTab"
+﻿<Window x:Name="newTab_win" x:Class="CPSC_481_Horizontal_Prototype.AddTab"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
         mc:Ignorable="d"
-        Title="AddTab" Height="300" Width="300">
+
+        Title="AddTab" Height="256" Width="467" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <DockPanel HorizontalAlignment="Center" Margin="0,50,0,0" VerticalAlignment="Center" Width="346" Height="118.543">
+            <WrapPanel x:Name="inner" DockPanel.Dock="Top" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="10,0">
+                <Label x:Name="lbl_name"  Content="Name:&#xA;" HorizontalAlignment="Center" VerticalAlignment="Center" Width="56" Height="40" FontSize="16"/>
+                <TextBox x:Name="txtbox_name" HorizontalAlignment="Left" Height="48" TextWrapping="Wrap" VerticalAlignment="Center" Width="268" TextChanged="textBox_TextChanged" FontSize="32"/>
+            </WrapPanel>
+
+            <Grid DockPanel.Dock="Bottom" Margin="13,0" VerticalAlignment="Top" Height="53">
+                <Button x:Name="btn_cancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Center" Height="48"  Width="120" Click="btn_cancel_Click" Margin="0,0,0,-16"/>
+                <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Right" VerticalAlignment="Center" Height="48"  Width="120" Margin="0,0,0,-16"/>
+            </Grid>
+        </DockPanel>
+        <Label x:Name="lbl_title" Content="New Tab" HorizontalAlignment="Center" Margin="0,31,0,0" VerticalAlignment="Top" FontSize="24"/>
+
     </Grid>
 </Window>
