--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/HomeScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/HomeScreen.xaml
@@ -5,12 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
         mc:Ignorable="d"
-        Title="HomeScreen" Height="768" Width="1280
-        " WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None">
+        Title="HomeScreen" Height="768" Width="1280" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="Resources/Images/blurred_bar.jpg" Stretch="UniformToFill"/>
-        </Grid.Background>
         <StackPanel x:Name="tabPanel" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="150" Background="#FF1D1D1F">
             <Image x:Name="logo" Height="100" Width="150" Source="Resources/Images/logo_med.png"/>
             <Button x:Name="btn_addTab" Height="55" Content="New Tab +" BorderBrush="{x:Null}" Background="#FF101011" Foreground="#FF8C8D9C" FontFamily="Segoe UI Semibold" FontSize="18.667" Click="btn_addTab_Click"/>
