Some small changes

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/AddTab.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/AddTab.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="newTab_win" x:Class="CPSC_481_Horizontal_Prototype.AddTab"
+﻿<Window x:Name="win_NewTab" x:Class="CPSC_481_Horizontal_Prototype.AddTab"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
