--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/MainScreen.xaml
@@ -12,32 +12,18 @@
             <Button x:Name="btn_personTab" Width="75"  Height="75" Content="S" BorderBrush="{x:Null}" Background="#FF101011" Foreground="#FF1E7052" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_changeTab_Click"/>
             <Button x:Name="btn_addTab" Width="75"  Height="75" Content="+" BorderBrush="{x:Null}" Background="#FF101011" Foreground="#FF8C8D9C" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_addTab_Click"/>
         </StackPanel>
-        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFD1D0DA">
-            <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="579" Margin="25,148,0,0" VerticalAlignment="Top" Width="1150">
-                <TabItem Header="Drinks" Height="60" Width="100" FontSize="26.667">
-                    <Grid Background="#FFE5E5E5" Margin="0,0,-22,0">
-                        <local:MenuItem_Control x:Name="drinkItem" Height="165" Width="165" Margin="10,10,969,336"/>
-                    </Grid>
-                </TabItem>
-                <TabItem Header="Food" Height="60" Width="100" FontSize="26.667">
-                    <Grid x:Name="tab_specials" Background="#FFE5E5E5">
-                        <local:MenuItem_Control x:Name="menuItem" Height="165" Width="165" Margin="10,10,969,336"/>
-                        <local:MenuItem_Control x:Name="menuItem_Copy" Height="165" Width="165" Margin="209,10,770,336"/>
-                    </Grid>
-
-                </TabItem>
-            </TabControl>
+        <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFD1D0DA">
+            <local:PageHolder x:Name="pageHolder" Height="768" Width="1205" Margin="0,0,0,0"/>
             <WrapPanel HorizontalAlignment="Left" Height="100" Margin="270,660,0,0" VerticalAlignment="Bottom" Width="420">
-                <Button x:Name="btn_specials" Content="Specials" Width="105" Height="100" IsEnabled="False"/>
-                <Button x:Name="btn_drinks" Content="Drinks" Width="105" Height="100"/>
-                <Button x:Name="btn_food" Content="Food" Width="105" Height="100"/>
+                <Button x:Name="btn_specials" Content="Specials" Width="105" Height="100" Click="btn_specials_Click"/>
+                <Button x:Name="btn_drinks" Content="Drinks" Width="105" Height="100" Click="btn_drinks_Click"/>
+                <Button x:Name="btn_food" Content="Food" Width="105" Height="100" Click="btn_food_Click"/>
                 <Button x:Name="btn_help" Content="Help" Width="105" Height="100" Click="btn_help_Click"/>
 
             </WrapPanel>
             <DockPanel HorizontalAlignment="Right" Height="168" LastChildFill="False" VerticalAlignment="Bottom" Width="410">
                 <Button x:Name="button" DockPanel.Dock="Bottom" Content="Name: $$$$$$&#xA;---------------------&#xA;Click to pay for order" Height="168" VerticalAlignment="Top" Width="410" FontSize="29.333"/>
             </DockPanel>
-            <Label x:Name="lbl_special" Content="Specials" HorizontalAlignment="Left" Margin="25,36,0,0" VerticalAlignment="Top" FontSize="64"/>
         </Grid>
     </Grid>
 </Window>
