--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Food.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Food.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CPSC_481_Horizontal_Prototype.FoodPage"
+﻿<UserControl x:Class="CPSC_481_Horizontal_Prototype.Page_Food"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
