--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Specials.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Specials.xaml
@@ -1,34 +1,34 @@
-﻿<UserControl x:Class="CPSC_481_Horizontal_Prototype.DrinksPage"
+﻿<UserControl x:Class="CPSC_481_Horizontal_Prototype.Page_Specials"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
              mc:Ignorable="d" 
-             d:DesignHeight="768" d:DesignWidth="1205">
+               d:DesignHeight="768" d:DesignWidth="1280">
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" Background="#FFD1D0DA">
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="579" Margin="25,148,0,0" VerticalAlignment="Top" Width="1150">
             <TabItem Header="Beer" Height="60" Width="100" FontSize="26.667">
                 <Grid Background="#FFE5E5E5" Margin="0,0,-22,0"/>
             </TabItem>
             <TabItem Header="Wine" Height="60" Width="100" FontSize="26.667">
-                <Grid x:Name="tab_wine" Background="#FFE5E5E5"/>
+                <Grid x:Name="tab_specials" Background="#FFE5E5E5"/>
 
             </TabItem>
             <TabItem Header="Spirits" Height="60" Width="100" FontSize="26.667" Margin="0,-1,0,1">
-                <Grid x:Name="tab_spirits" Background="#FFE5E5E5"/>
+                <Grid x:Name="tab_specials1" Background="#FFE5E5E5"/>
 
             </TabItem>
             <TabItem Header="Pop" Height="60" Width="100" FontSize="26.667" Margin="0,-1,0,1">
-                <Grid x:Name="tab_pop" Background="#FFE5E5E5"/>
+                <Grid x:Name="tab_specials2" Background="#FFE5E5E5"/>
 
             </TabItem>
             <TabItem Header="Water" Height="60" Width="100" FontSize="26.667" Margin="0,-1,0,1">
-                <Grid x:Name="tab_water" Background="#FFE5E5E5"/>
+                <Grid x:Name="tab_specials3" Background="#FFE5E5E5"/>
 
             </TabItem>
         </TabControl>
-        <Label x:Name="lbl_drinks" Content="Drinks" HorizontalAlignment="Left" Margin="25,29,0,0" VerticalAlignment="Top" FontSize="64"/>
+        <Label x:Name="lbl_specials" Content="Specials" HorizontalAlignment="Left" Margin="25,29,0,0" VerticalAlignment="Top" FontSize="64"/>
 
     </Grid>
 </UserControl>
