--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/MainScreen.xaml
@@ -13,7 +13,7 @@
             <Button x:Name="btn_addTab" Width="75"  Height="75" Content="+" BorderBrush="{x:Null}" Background="#FF101011" Foreground="#FF8C8D9C" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_addTab_Click"/>
         </StackPanel>
         <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFD1D0DA">
-            <local:PageHolder x:Name="pageHolder" Height="768" Width="1205" Margin="0,0,0,0"/>
+            <!--<local:PageHolder x:Name="pageHolder" Height="768" Width="1205" Margin="0,0,0,0"/>-->
             <WrapPanel HorizontalAlignment="Left" Height="100" Margin="270,660,0,0" VerticalAlignment="Bottom" Width="420">
                 <Button x:Name="btn_specials" Content="Specials" Width="105" Height="100" Click="btn_specials_Click"/>
                 <Button x:Name="btn_drinks" Content="Drinks" Width="105" Height="100" Click="btn_drinks_Click"/>
@@ -21,9 +21,13 @@
                 <Button x:Name="btn_help" Content="Help" Width="105" Height="100" Click="btn_help_Click"/>
 
             </WrapPanel>
-            <DockPanel HorizontalAlignment="Right" Height="168" LastChildFill="False" VerticalAlignment="Bottom" Width="410">
-                <Button x:Name="button" DockPanel.Dock="Bottom" Content="Name: $$$$$$&#xA;---------------------&#xA;Click to pay for order" Height="168" VerticalAlignment="Top" Width="410" FontSize="29.333"/>
-            </DockPanel>
+            
+            <Grid HorizontalAlignment="Right" Height="75" VerticalAlignment="Bottom" Width="300" Background="White">
+                <Label x:Name="lbl_tabName" Content="Zachary" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Height="35" Width="200" FontSize="21"/>
+                <Label x:Name="lbl_tabTotal" Content="$00.00" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="200" FontSize="21"/>
+                <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Height="75" FontSize="21"/>
+            </Grid>
+            <StackPanel HorizontalAlignment="Left" Height="100" Margin="897,585,0,0" VerticalAlignment="Top" Width="300"/>
         </Grid>
     </Grid>
 </Window>
