--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Drinks.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Drinks.xaml
@@ -9,7 +9,10 @@
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" Background="#FFD1D0DA">
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="579" Margin="25,148,0,0" VerticalAlignment="Top" Width="1150">
             <TabItem Header="Beer" Height="60" Width="100" FontSize="26.667">
-                <Grid Background="#FFE5E5E5" Margin="0,0,-22,0"/>
+                <Grid Background="#FFE5E5E5" Margin="0,0,-22,0">
+                    <local:MenuItem_Control x:Name="menuItem" Height="170" Width="170" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,0,0,0" />
+                </Grid>
+
             </TabItem>
             <TabItem Header="Wine" Height="60" Width="100" FontSize="26.667">
                 <Grid x:Name="tab_wine" Background="#FFE5E5E5"/>
