--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/HomeScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/HomeScreen.xaml
@@ -6,16 +6,17 @@
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
         mc:Ignorable="d"
         Title="HomeScreen" Height="768" Width="1280" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None">
-    <Grid>
-        <StackPanel x:Name="tabPanel" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="150" Background="#FF1D1D1F">
-            <Image x:Name="logo" Height="100" Width="150" Source="../Resources/Images/logo_med.png"/>
-            <Button x:Name="btn_addTab" Height="55" Content="New Tab +" BorderBrush="{x:Null}" Background="#FF101011" Foreground="#FF8C8D9C" FontFamily="Segoe UI Semibold" FontSize="18.667" Click="btn_addTab_Click"/>
+    <Grid Background="#FF3393AB">
+        <StackPanel x:Name="tabPanel" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="150" Background="#FF122331">
+            <Image x:Name="logo" Height="100" Source="../Resources/Images/logo_med.png"/>
+            <Button x:Name="btn_addTab" Height="48" Width="155" Content="New Tab +" BorderBrush="{x:Null}" Background="#FF02B694" Foreground="#FFA4DDCE" FontFamily="Segoe UI Light" FontSize="18.667" Click="btn_addTab_Click"/>
         </StackPanel>
-        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="150,0,0,0" Background="#FFD1D0DA">
-            
-            <TextBlock x:Name="welcome" TextWrapping="Wrap" Text="Welcome to Kilkenny!" FontSize="96" FontFamily="Segoe UI Black" Height="268" Width="611" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF1E7052" Margin="248,240,248,242" Opacity="0.75"/>
-            <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Please add tab to get started" VerticalAlignment="Bottom" FontSize="32" TextDecorations="{x:Null}" Margin="0,0,0,152" Foreground="Black"/>
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="150,0,0,0">
+            <Grid.Background>
+                <ImageBrush ImageSource="/;component/Resources/Images/home_background.png"/>
+            </Grid.Background>
 
+            <Label x:Name="lbl_date" Content="Thursday March 9th, 2017" HorizontalContentAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="32" Foreground="White" FontFamily="Segoe UI Semilight" FontSize="14"/>
         </Grid>
 
     </Grid>
