--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -25,7 +25,7 @@
             <Grid HorizontalAlignment="Right" Height="75" VerticalAlignment="Bottom" Width="300" Background="White">
                 <Label x:Name="lbl_tabName" Content="Zachary" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Height="35" Width="200" FontSize="21"/>
                 <Label x:Name="lbl_tabTotal" Content="$00.00" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="200" FontSize="21"/>
-                <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Height="75" FontSize="21"/>
+                <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Height="75" FontSize="21" Click="btn_payNow_Click"/>
             </Grid>
             <StackPanel HorizontalAlignment="Left" Height="100" Margin="897,585,0,0" VerticalAlignment="Top" Width="300"/>
         </Grid>
