--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/PaymentScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/PaymentScreen.xaml
@@ -5,14 +5,84 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype.Screens"
         mc:Ignorable="d"
-        Title="PaymentScreen" Height="295" Width="450" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
+        Title="PaymentScreen" Height="550" Width="450" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
     <Grid Margin="1,0,-1,0">
-        <Label x:Name="lbl_title" Content="Zachary's Tab" HorizontalAlignment="Center" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18.667"/>
-        <Button x:Name="btn_close" Content="&#xE106;"  VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="30" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_close_Click"/>
-        <RadioButton x:Name="rbtn_cash" Content="Cash" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="291,207,94,0" Checked="rbtn_cash_Checked" VerticalContentAlignment="Center" FontSize="16"/>
-        <RadioButton x:Name="rbtn_card" Content="Card (Credit/Debit)" IsChecked="True" HorizontalAlignment="Center" Margin="104,207,181,0" VerticalAlignment="Top" Checked="rbtn_card_Checked" VerticalContentAlignment="Center" FontSize="16"/>
-        <Button x:Name="btn_payNow" Content="Pay Now" FontSize="18.667" Height="35" Width="150"  HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
-        <TextBlock x:Name="tb_itemlist" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,50,0,0" Height="152" Width="240"><Run Text="1 x Burger..........................................................$12.00"/><LineBreak/><Run Text="2 x Fries................................................................$8.00"/><LineBreak/><Run Text="2 x Rickards Red.............................................$13.00"/><LineBreak/><Run Text="--------------------------------------------------"/><LineBreak/><Run Text="Subtotal.............................................................$33.00"/><LineBreak/><Run Text="--------------------------------------------------"/><LineBreak/><Run Text="Tax..........................................................................$3.50"/><LineBreak/><Run Text="--------------------------------------------------"/><LineBreak/><Run Text="Total.....................................................................$36.50"/></TextBlock>
+        <Label x:Name="lbl_title" Content="Zachary's Tab" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="18" Height="60" Width="450" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Background="#FFF0ECEC" FontFamily="Segoe UI Light"/>
+        <Button x:Name="btn_close" Content="&#xE10A;"  VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="30" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_close_Click" Foreground="#FFEE516C"/>
+
+
+        <Button x:Name="rbtn_cash" Width="100" Height="100" FontSize="12" VerticalAlignment="Bottom" HorizontalAlignment="Right" VerticalContentAlignment="Bottom" Margin="0,0,75,55" Padding="0" BorderThickness="0">
+            <Button.Background >
+                <ImageBrush ImageSource="/;component/Resources/Images/btn_cash.png">
+                    <ImageBrush.RelativeTransform>
+                        <TransformGroup>
+                            <ScaleTransform CenterY="0.4" CenterX="0.4" ScaleX="0.4" ScaleY="0.4"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </ImageBrush.RelativeTransform>
+                </ImageBrush>
+            </Button.Background>
+            <Label x:Name="lbl_cash" Content="Cash" FontSize="14" FontFamily="Segoe UI Light"/>
+        </Button>
+
+        <Button x:Name="rbtn_card" Width="100" Height="100" FontSize="12" VerticalAlignment="Bottom" HorizontalAlignment="Left" VerticalContentAlignment="Bottom" Margin="75,0,0,55" Padding="0" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="/;component/Resources/Images/btn_card.png">
+                    <ImageBrush.RelativeTransform>
+                        <TransformGroup>
+                            <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.5" ScaleY="0.5"/>
+                            <SkewTransform CenterY="0.5" CenterX="0.5"/>
+                            <RotateTransform CenterY="0.5" CenterX="0.5"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </ImageBrush.RelativeTransform>
+                </ImageBrush>
+            </Button.Background>
+            <Label x:Name="lbl_credit" Content="Credit/Debit" FontSize="14" FontFamily="Segoe UI Light"/>
+        </Button>
+        <Button x:Name="btn_payNow" Content="PAY NOW" FontSize="18" Height="35" Width="450" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="btn_payNow_Click" Background="#FF00B694" Foreground="White" FontFamily="Segoe UI Black" BorderThickness="0"/>
+        <Label x:Name="lbl_quantity" Content="Quantity" HorizontalAlignment="Left" Margin="70,70,0,0" VerticalAlignment="Top" FontFamily="Calibri" FontSize="14" FontWeight="Bold"/>
+        <Label x:Name="lbl_itemName" Content="Item Name" HorizontalAlignment="Center" Margin="188,70,188,0" VerticalAlignment="Top" FontFamily="Calibri" FontSize="14" FontWeight="Bold"/>
+        <Label x:Name="lbl_price" Content="Price" HorizontalAlignment="Right" Margin="0,70,70,0" VerticalAlignment="Top" FontFamily="Calibri" FontSize="14" FontWeight="Bold"/>
+
+
+        <TextBlock Name="tb_quantity" HorizontalAlignment="Left" Margin="100,98,0,343" Width="Auto" Height="Auto" FontFamily="Segoe UI Light">
+            <Run Text="1"/>
+            <LineBreak/>
+            <LineBreak/>
+            <Run Text="2"/>
+            <LineBreak/>
+            <LineBreak/>
+            <Run Text="2"/>
+             <LineBreak/>
+            <LineBreak/>
+            <Run Text="1"/>
+        </TextBlock>
+
+        <TextBlock x:Name="tb_itemName" TextAlignment="Center" HorizontalAlignment="Center" Margin="188,100,181,335" Width="Auto" Height="Auto" FontFamily="Segoe UI Light"><Run Text="Big Pub Burger"/><LineBreak/><LineBreak/><Run Text="Rickard's Red"/><LineBreak/><LineBreak/><Run Text="Soft Drink"/><LineBreak/><LineBreak/><Run Text="Maple Cream"/></TextBlock>
+
+        <TextBlock Name="tb_price" TextAlignment="Center" HorizontalAlignment="Right" Margin="0,100,75,341" Width="Auto" Height="Auto" FontFamily="Segoe UI Light">
+            <Run Text="$12.00"/>
+            <LineBreak/>
+            <LineBreak/>
+            <Run Text="$13.00"/>
+            <LineBreak/>
+            <LineBreak/>
+            <Run Text="$5.00"/>
+             <LineBreak/>
+            <LineBreak/>
+            <Run Text="$7.50"/>
+        </TextBlock>
+
+        <GridSplitter x:Name="gridSplitter_Copy" HorizontalAlignment="Center" Height="1" Margin="45,120,45,0" VerticalAlignment="Top" Width="360" Background="#FFACAAAA"/>
+        <GridSplitter x:Name="gridSplitter_Copy1" HorizontalAlignment="Center" Height="1" Margin="45,150,45,0" VerticalAlignment="Top" Width="360" Background="#FFACAAAA"/>
+        <GridSplitter x:Name="gridSplitter_Copy2" HorizontalAlignment="Center" Height="1" Margin="45,182,45,0" VerticalAlignment="Top" Width="360" Background="#FFACAAAA"/>
+        <GridSplitter x:Name="gridSplitter_Copy3" HorizontalAlignment="Center" Height="1" Margin="45,214,45,0" VerticalAlignment="Top" Width="360" Background="#FFACAAAA"/>
+
+        <Label x:Name="lbl_subtotal" Content="Subtotal             $42.50" HorizontalAlignment="Right" Margin="0,289,75,236" FontFamily="Segoe UI Light"/>
+        <Label x:Name="label" Content="GST               $2.13" HorizontalAlignment="Right" Margin="0,312,75,211" FontFamily="Segoe UI Light"/>
+        <Label x:Name="lbl_total" Content="Total             $44.63" HorizontalAlignment="Right" Margin="0,337,75,186" FontFamily="Segoe UI Light"/>
+
 
     </Grid>
 </Window>
