--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Drinks.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Drinks.xaml
@@ -5,56 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
              mc:Ignorable="d" 
-             d:DesignHeight="768" d:DesignWidth="1205">
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" Background="#FFD1D0DA">
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="579" Margin="25,148,0,0" VerticalAlignment="Top" Width="1150">
-            <TabItem Header="Beer" Height="60" Width="100" FontSize="26.667">
-                <Grid Background="#FFE5E5E5" Margin="0,0,-22,0">
-                    <local:MenuItem_Control x:Name="menuItem" Height="170" Width="170" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,0,0,0" />
-                </Grid>
+            d:DesignHeight="965" d:DesignWidth="1820" Width="1820">
 
-            </TabItem>
-            <TabItem Header="Whiskey" Height="60" FontSize="26.667" Margin="-8,-1,-1,1">
-                <Grid x:Name="tab_wine" Background="#FFE5E5E5"/>
-
-            </TabItem>
-            <TabItem Header="Top Shelf" Height="60" FontSize="26.667" Margin="-6,-1,-1,1">
-                <Grid x:Name="tab_spirits" Background="#FFE5E5E5"/>
-
-            </TabItem>
-            <TabItem Header="Cocktails" Height="60" FontSize="26.667" Margin="-4,-1,-7,1">
-                <Grid x:Name="tab_pop" Background="#FFE5E5E5"/>
-
-            </TabItem>
-            <TabItem Header="Wines" Height="60" FontSize="26.667" Margin="0,-1,-11,1">
-                <Grid x:Name="tab_water" Background="#FFE5E5E5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="63*"/>
-                        <ColumnDefinition Width="80*"/>
-                    </Grid.ColumnDefinitions>
-                </Grid>
-
-            </TabItem>
-            <TabItem Header="Shooters" Height="60" FontSize="26.667" Margin="0,-1,-7,1">
-                <Grid x:Name="tab_water1" Background="#FFE5E5E5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="63*"/>
-                        <ColumnDefinition Width="80*"/>
-                    </Grid.ColumnDefinitions>
-                </Grid>
-
-            </TabItem>
-            <TabItem Header="Non-Alcoholic" Height="60" FontSize="26.667" Margin="0,-1,0,1" HorizontalAlignment="Left" Width="185">
-                <Grid x:Name="tab_water2" Background="#FFE5E5E5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="63*"/>
-                        <ColumnDefinition Width="80*"/>
-                    </Grid.ColumnDefinitions>
-                </Grid>
-
-            </TabItem>
-        </TabControl>
-        <Label x:Name="lbl_drinks" Content="Drinks" HorizontalAlignment="Left" Margin="25,29,0,0" VerticalAlignment="Top" FontSize="64"/>
-
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0" Background="White">
+        <Label x:Name="lbl_drinks" Content="Drinks" HorizontalAlignment="Left" Margin="25,29,0,0" VerticalAlignment="Top" FontSize="64" Background="{x:Null}" Foreground="#FF288DA7" FontFamily="Segoe UI Semibold"/>
+        <GridSplitter x:Name="gridSplitter" HorizontalAlignment="Left" Height="5" Margin="25,135,0,0" VerticalAlignment="Top" Width="400"/>
+        <ScrollViewer HorizontalAlignment="Stretch" Margin="0,165,0,0" VerticalAlignment="Stretch">
+            <Label x:Name="lbl_beer" Content="Beer" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF414141" FontSize="24" Margin="25,25,0,0"/>
+        </ScrollViewer>
     </Grid>
 </UserControl>
