--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -13,72 +13,66 @@
             <Button x:Name="btn_personTab_2" BorderThickness="0,0,0,0"  Width="75"  Height="75" Content="S" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_changeTab_Click" Background="#FFf2ab57"/>
             <Button x:Name="btn_addTab" Width="75" BorderThickness="0,0,0,0"  Height="75" VerticalContentAlignment="Center" Content="+" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_addTab_Click" Background="#FF00b694" RenderTransformOrigin="0.547,0.727"/>
         </StackPanel>
-        <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFD1D0DA">
-            <!--<local:Page_Holder x:Name="Page_Holder" Height="768" Width="1205" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,0,0,0"/> -->
+        <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFF4F4F4">
+            <local:Page_Holder x:Name="Page_Holder" VerticalAlignment="Top" Margin="10,10,10,118" HorizontalAlignment="Center" Height="965" Width="2220" />
+            <Rectangle Fill="#FF213F57" HorizontalAlignment="Stretch" Height="108" VerticalAlignment="Bottom" StrokeThickness="0" Margin="10,0,311,0" RadiusX="3" RadiusY="3" />
+
             <WrapPanel HorizontalAlignment="Center" Height="104"  VerticalAlignment="Bottom" Width="400" Margin="268,0,529,0">
-                <Button x:Name="btn_specials"  Content="" Width="100" Height="104" Click="btn_specials_Click" BorderBrush="{x:Null}" BorderThickness="0">
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Style.Triggers>
-                                <Trigger Property="IsFocused" Value="True">
-                                    <Setter Property="Background" Value="Red"/>
-                                </Trigger>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="Green"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>
+                <Button x:Name="btn_specials"  Content="Specials" Width="100" Height="104" Click="btn_specials_Click" BorderBrush="{x:Null}" BorderThickness="0" Foreground="{x:Null}">
                     <Button.Background>
                         <ImageBrush ImageSource="/;component/Resources/Images/btn_specials_bg.png"/>
                     </Button.Background>
-                    <!--<Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Style.Triggers>
-                                <Trigger Property="IsFocused" Value="True">
-                                    <Setter Property="Background">
-                                        <Setter.Value>
-                                            <ImageBrush ImageSource="/;component/Resources/Images/btn_specials-selected_bg.png"/>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>-->  
                 </Button>
-                <Button x:Name="btn_drinks" Content="Drinks" Width="100" Height="104" Click="btn_drinks_Click">
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="Green"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>
+                <Button x:Name="btn_drinks" Content="Drinks" Width="100" Height="104" Click="btn_drinks_Click" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/;component/Resources/Images/btn_drinks_bg.png"/>
+                    </Button.Background>
                 </Button>
-                <Button x:Name="btn_food" Content="Food" Width="100" Height="104" Click="btn_food_Click"/>
-                <Button x:Name="btn_help" Content="Help" Width="100" Height="104" Click="btn_help_Click"/>
+                <Button x:Name="btn_food" Content="Food" Width="100" Height="104" Click="btn_food_Click" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/;component/Resources/Images/btn_food_bg.png"/>
+                    </Button.Background>
+                </Button>
+                <Button x:Name="btn_help" Content="Help" Width="100" Height="104" Click="btn_help_Click" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/;component/Resources/Images/btn_help_bg.png"/>
+                    </Button.Background>
+                </Button>
 
             </WrapPanel>
-
-            <Grid HorizontalAlignment="Right" Height="75" VerticalAlignment="Bottom" Width="300" Background="#FFE6E5E8">
-                <Label x:Name="lbl_tabName" Content="Stuart" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Height="35" Width="200" FontSize="21"/>
-                <Label x:Name="lbl_tabTotal" Content="Total: $0.00" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="200" FontSize="21"/>
-                <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Height="75" FontSize="21"/>
-            </Grid>
-            <Button x:Name="btn_expandQueue" Content="&#xE014;" Width="20" Height="20" Click="btn_expandQueue_Click" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,280,75" Background="#FFE6E5E8" FontFamily="Segoe UI Symbol"/>
-
-            <StackPanel x:Name="stack_sidePanel" HorizontalAlignment="Right" Height="175" Width="300" Background="#FFE6E5E8" VerticalAlignment="Bottom" Margin="0,0,0,75" Visibility="Collapsed">
-                <Label x:Name="lbl_queueItem4" Content="Coke..........................................$2.50" HorizontalContentAlignment="Left" Height="35" Width="300" FontSize="21" />
-                <Label x:Name="lbl_queueItem3" Content="Rustic Red...............................$6.50" HorizontalContentAlignment="Left" Height="35" Width="300" FontSize="21" />
-                <Label x:Name="lbl_queueItem2" Content="Maple Cream.........................$6.50" HorizontalContentAlignment="Left" Height="35" Width="300" FontSize="21" />
-                <Label x:Name="lbl_queueItem1" Content="Nut Brown...............................$6.50" HorizontalContentAlignment="Left" Height="35" Width="300" FontSize="21" />
-                <Grid HorizontalAlignment="Right" Height="35" VerticalAlignment="Bottom" Width="300" Background="White">
-                    <Label x:Name="lbl_queueTotal" Content="$22.00" HorizontalAlignment="Left" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" Height="35" Width="150" FontSize="18" Background="#FFCF4F4F" BorderThickness="0,0,2,0" />
-                    <Button x:Name="lbl_submitQueue" Content="Submit Order" HorizontalAlignment="Right" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" Height="35" Width="150" FontSize="21" Background="#FFE85555" BorderThickness="2,0,0,0" />
+            <Button x:Name="btn_expandQueue" VerticalContentAlignment="Top" Content="&#xE014;" Width="32" Height="32" Click="btn_expandQueue_Click" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,268,108" Background="White" FontFamily="Segoe UI Symbol" BorderBrush="{x:Null}" Foreground="#FF00B694" BorderThickness="0" FontSize="18">
+                <Button.Effect>
+                    <DropShadowEffect ShadowDepth="1" Opacity="0.25"/>
+                </Button.Effect>
+            </Button>
+            <StackPanel x:Name="stack_sidePanel" HorizontalAlignment="Right" Height="248" Width="300" Background= "#FFF4F4F4" VerticalAlignment="Bottom" Margin="0,0,0,108" Visibility="Collapsed">
+                <StackPanel.Effect>
+                    <DropShadowEffect ShadowDepth="1" Opacity="0.25"/>
+                </StackPanel.Effect>
+                <Label x:Name="lbl_queueItem5" Content="Current Order" HorizontalContentAlignment="Left" Height="48" Width="300" FontSize="24" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
+                <Label x:Name="lbl_queueItem4" Content="Coke                                $2.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
+                <Label x:Name="lbl_queueItem3" Content="Rustic Red                       $6.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
+                <Label x:Name="lbl_queueItem2" Content="Maple Cream                  $6.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
+                <Label x:Name="lbl_queueItem1" Content="Nut Brown                      $6.50" HorizontalContentAlignment="Left" Height="38" Width="300" FontSize="21" Background="White" BorderThickness="0,0,0,3" BorderBrush="#FFF4F4F4" Foreground="#FF4F4F4F" />
+                <Grid HorizontalAlignment="Right" Height="48" VerticalAlignment="Bottom" Width="300" Background="White">
+                  
+                    <Label x:Name="lbl_queueTotal" Content="Total: $22.00" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="35" Width="150" FontSize="18" Background="{x:Null}" BorderThickness="0,0,2,0" Foreground="#FF4F4F4F" FontFamily="Segoe UI Light" />
+                    <Button x:Name="lbl_submitQueue" Content="Submit Order" HorizontalAlignment="Right" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Width="100" FontSize="14" Background="#FF213F57" BorderThickness="0" BorderBrush="{x:Null}" Foreground="#FFB5BEC7" />
+                    
                 </Grid>
             </StackPanel>
+            
+           
+            <Grid HorizontalAlignment="Right" Height="108" VerticalAlignment="Bottom" Width="300" Background="White">
+                <Label x:Name="lbl_tabName" Content="Stuart" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Top" Height="54" Width="195" FontSize="21" Foreground="#FF4F4F4F" Margin="5,0,0,0"/>
+                <Separator Width="180"  HorizontalAlignment="Left" Margin="10,0,0,0" Background="#FFECECEC"/>                   
+                <Label x:Name="lbl_tabTotal" Content="Total: $0.00" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="54" Width="195" FontSize="34" FontFamily="Segoe UI Light" Foreground="#FF8E8E8E" BorderThickness="0" Margin="5,0,0,0"/>
+                <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="100"  FontSize="21" Background="#FF00B694" BorderBrush="#FFE1F7F3" Foreground="#FFE1F7F3" BorderThickness="0"/>
+            </Grid>
+            
+
+            
+            
         </Grid>
     </Grid>
 </Window>
